[package]
name = "compiler"
version = "0.1.0"
authors = ["Sam Wight <samuelwight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
serde_json = { version = "1.0.57", features = ["derive"] }
serde = "1.0.115"
